--- a/optimizacion/01-computo-cientifico/1.6-diferenciacion-numerica.ipynb
+++ b/optimizacion/01-computo-cientifico/1.6-diferenciacion-numerica.ipynb
@@ -18,7 +18,8 @@
     "## Diferencas Finitas\n",
     "\n",
     "**Ejemplo**:\n",
-    "<br>Realizar una gráfica de log(error relativo) vs log(h) (h en el eje horizontal) para aproximar la primera derivada de "
+    "<br>Realizar una gráfica de `log(error relativo)` vs `log(h)` (h en el eje horizontal) para aproximar la primera derivada de $f(x)=e^{-x}$ en $x=1$ con $h\\in[10^{-16},...,10^{-1}]$ y diferencias hacia adelante.\n",
+    "<br>Valor por aproximar: $f^{(1)}(1)=-e^{-1}$"
    ]
   },
   {
@@ -328,11 +329,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7c528302-5b17-4959-acd8-c356d42c981f",
+   "metadata": {},
+   "source": [
+    "### Diferencias Finitas para $f:\\mathbb{R}^{n}\\rightarrow\\mathbb{R}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2a9dc96e-3d2a-415f-98a8-4ee1bb0367a1",
    "metadata": {},
    "source": [
     "**Ejemplo**:\n",
-    "<br> Aproximar..."
+    "<br> Aproximar $\\nabla f(x)$ con diferencias hacia adelante y $h\\in[10^{-16},...,10^{-1}]$ para $f:\\mathbb{R}^{4}\\rightarrow\\mathbb{R}$, dada por $f(x)=(x_{1}^2-x_{2}^2)^2+x_{1}^2+(x_{3}^2-x_{4}^2)+x_{3}^2$ en el punto $x_0=(1.5,1.5,1.5,1.5)^T$. Realizar una gráfica de `log(error relativo)` vs `log(h)`\n",
+    "\n",
+    "Primero validamos con `sympy` el gradiente de la función."
    ]
   },
   {
@@ -342,13 +353,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy"
+    "import sympy\n",
+    "from sympy.tensor.array import derive_by_array "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "68d4b2d3-1cb9-45e4-9f15-2e0c685e6cd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(x1, x2, x3, x4)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1, x2, x3, x4 = sympy.symbols(\"x1,x2,x3,x4\")\n",
+    "x = (x1, x2, x3, x4)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c5a5f8d2-8591-425b-8dd0-e53b2d0244c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle x_{1}^{2} + x_{3}^{2} + \\left(x_{1}^{2} - x_{2}^{2}\\right)^{2} + \\left(x_{3}^{2} - x_{4}^{2}\\right)^{2}$"
+      ],
+      "text/plain": [
+       "x1**2 + x3**2 + (x1**2 - x2**2)**2 + (x3**2 - x4**2)**2"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = (x1**2 - x2**2)**2 + x1**2 + (x3**2 - x4**2)**2 + x3**2\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "91744557-6de7-48c2-b7d3-d4de555ebe91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}4 x_{1} \\left(x_{1}^{2} - x_{2}^{2}\\right) + 2 x_{1} & - 4 x_{2} \\left(x_{1}^{2} - x_{2}^{2}\\right) & 4 x_{3} \\left(x_{3}^{2} - x_{4}^{2}\\right) + 2 x_{3} & - 4 x_{4} \\left(x_{3}^{2} - x_{4}^{2}\\right)\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "[4*x1*(x1**2 - x2**2) + 2*x1, -4*x2*(x1**2 - x2**2), 4*x3*(x3**2 - x4**2) + 2*x3, -4*x4*(x3**2 - x4**2)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "derive_by_array(f, x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68d4b2d3-1cb9-45e4-9f15-2e0c685e6cd5",
+   "id": "f17b56b3-3b1c-4321-9d86-71081f3b845d",
    "metadata": {},
    "outputs": [],
    "source": []
