carga de tablas limpias

--- a/mineria-analisis-datos/proyecto/datos/limpieza_tablas.ipynb
+++ b/mineria-analisis-datos/proyecto/datos/limpieza_tablas.ipynb
@@ -23,28 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6973df0c-9a1f-41b0-8950-b9229c7beadf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['datos', 'libros', 'presentaciones', 'README.md']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path_universal = \"C:\\\\Users\\\\Miguel\\\\Documents\\\\Github\\\\itam-mcd\\\\mineria-analisis-datos\\\\proyecto\"\n",
-    "os.listdir(path_universal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "3789ae6e-40c6-4c53-b31e-1ecdbb011889",
    "metadata": {},
    "outputs": [
@@ -67,14 +45,14 @@
        " 'status.csv']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path_datos = os.path.join(path_universal, \"datos\\\\originales\")\n",
-    "os.listdir(path_datos)"
+    "path_originales = \"originales\"\n",
+    "os.listdir(path_originales)"
    ]
   },
   {
@@ -91,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c281c29e-f6fb-4920-b7b9-2e08fe817972",
    "metadata": {},
    "outputs": [
@@ -215,13 +193,13 @@
        "4         http://en.wikipedia.org/wiki/Istanbul_Park  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "circuits = pd.read_csv(os.path.join(path_datos, 'circuits.csv'))\n",
+    "circuits = pd.read_csv(os.path.join(path_originales, 'circuits.csv'))\n",
     "\n",
     "#Se reemplaza \\\\N por np.nan\n",
     "circuits.replace(to_replace='\\\\N', value=np.nan, inplace=True)\n",
@@ -234,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8a78e030-46d9-46ce-9853-2869d0ee62a5",
    "metadata": {},
    "outputs": [
@@ -253,7 +231,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f71359aa-4c78-49fe-86d3-8d7db39759a2",
    "metadata": {},
    "outputs": [
@@ -368,7 +346,7 @@
        "max    79.000000  57.265300  144.968000  2227.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e3197e6d-f7c5-4736-b5d2-30787f0aa8de",
    "metadata": {},
    "outputs": [
@@ -408,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d2808b7f-94a3-4d32-ba51-83209d967e69",
    "metadata": {},
    "outputs": [
@@ -483,7 +461,7 @@
        "75  25.9581 -80.2389  NaN  http://en.wikipedia.org/wiki/Miami_Internation...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "05528ed7-9d51-488e-8968-7106da3224f0",
    "metadata": {},
    "outputs": [
@@ -580,7 +558,7 @@
        "75  25.9581 -80.2389   3.0  http://en.wikipedia.org/wiki/Miami_Internation...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,12 +573,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "08e84c1a-3b2d-4137-b592-57ab741dd687",
+   "metadata": {},
+   "source": [
+    "**Finalmente**:\n",
+    "<br>Se quita la columns `url` de lo que será la tabla de trabajo, y se guarda una copia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ec8f0ea0-a9bb-4669-a3c8-b7b5381a2277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "circuits.drop(columns='url', inplace=True)\n",
+    "circuits.to_csv('circuits.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0580682e-6ad1-47e2-ab1a-eb467688c814",
    "metadata": {},
    "source": [
-    "## Constructores\n",
-    "\n",
-    "La tabla de constructores está completa"
+    "## Constructores"
    ]
   },
   {
@@ -704,7 +700,7 @@
     }
    ],
    "source": [
-    "constructors = pd.read_csv(os.path.join(path_datos, 'constructors.csv'))\n",
+    "constructors = pd.read_csv(os.path.join(path_originales, 'constructors.csv'))\n",
     "\n",
     "#Se reemplaza \\\\N por np.nan\n",
     "constructors.replace(to_replace='\\\\N', value=np.nan, inplace=True)\n",
@@ -743,6 +739,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "616874ab-79cc-4b82-8570-174a3ce68db6",
+   "metadata": {},
+   "source": [
+    "La tabla de constructores está completa\n",
+    "\n",
+    "**Finalmente**:\n",
+    "<br>Se quita la columns `url` de lo que será la tabla de trabajo, y se guarda una copia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a97bfff8-97d8-4c51-a72e-2aa0e898f567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "constructors.drop(columns='url', inplace=True)\n",
+    "constructors.to_csv('constructors.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "796a704f-c572-4899-9c25-a363c9585a2e",
    "metadata": {},
    "source": [
@@ -751,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a1e03c4e-f591-4a7c-8cbf-8e68ed7bca6d",
    "metadata": {},
    "outputs": [
@@ -868,13 +886,13 @@
        "4     Finnish  http://en.wikipedia.org/wiki/Heikki_Kovalainen  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "drivers = pd.read_csv(os.path.join(path_datos, 'drivers.csv'))\n",
+    "drivers = pd.read_csv(os.path.join(path_originales, 'drivers.csv'))\n",
     "\n",
     "#Se reemplaza \\\\N por np.nan\n",
     "drivers.replace(to_replace='\\\\N', value=np.nan, inplace=True)\n",
@@ -887,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "138d06f7-7d01-4a94-960c-7a33e56b9d09",
    "metadata": {},
    "outputs": [
@@ -928,13 +946,24 @@
     "* Solamente se tiene referencia de número para 51 de ellos\n",
     "* Solo 97 pilotos cuentan con un código de identificación de 3 letras\n",
     "\n",
-    "No es relevante completar estas columnas debido a que son una referencia única adicional para cada piloto, para dicho propósito se puede utilizar la variable `driverRef`"
+    "No es relevante completar estas columnas debido a que son una referencia única adicional para cada piloto, para dicho propósito se puede utilizar la variable `driverRef`. Dicho eso, se descatan columnas `number`, `code`, y `url`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "69c0bd88-3879-4bc8-a5b8-f024a3f83f85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drivers.drop(columns=['number', 'code', 'url'], inplace=True)\n",
+    "drivers.to_csv('drivers.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fd24972-af09-4d5e-9482-99d726a0b47d",
+   "id": "45377a0a-f046-4a0c-8233-15ee97a08e85",
    "metadata": {},
    "outputs": [],
    "source": []
