Quitar tabla de circuitos

--- a/mineria-analisis-datos/proyecto/datos/limpieza_tablas.ipynb
+++ b/mineria-analisis-datos/proyecto/datos/limpieza_tablas.ipynb
@@ -585,7 +585,7 @@
    "metadata": {},
    "source": [
     "**Finalmente**:\n",
-    "<br>Se quita la columns `url` de lo que será la tabla de trabajo, y se guarda una copia"
+    "<br>Se quita la columns `url` de lo que será la tabla de trabajo, y se guarda una copia."
    ]
   },
   {
@@ -595,8 +595,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "circuits.drop(columns='url', inplace=True)\n",
-    "circuits.to_csv('circuits.csv', index=False)"
+    "circuits.drop(columns='url', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61666139-399d-4059-990b-621f951b866d",
+   "metadata": {},
+   "source": [
+    "**IMPORTANTE**:\n",
+    "Esta tabla no se almacena debido a que su información está contenida dentro"
    ]
   },
   {
