Rename files, add sample distribution nb

--- a/fundamentos-estadisticos/libros/02_pruebas_hipotesis.ipynb
+++ b/fundamentos-estadisticos/libros/02_pruebas_hipotesis.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "f8524f1c-43ac-494e-b2f0-011d255151e1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Tarea 4: Pruebas de hipótesis\n",
     "\n",
