--- a/fundamentos-estadisticos/libros/01_analisis_exploratorio.ipynb
+++ b/fundamentos-estadisticos/libros/01_analisis_exploratorio.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Análisis exploratorio\n",
     "\n",
-    "Solución de los ejercicios de la sección `Análisis exploratorio` del libro del curos [Fundamentos Estadísticos](https://tereom.github.io/fundamentos-2022/an%C3%A1lisis-exploratorio.html)"
+    "Solución de los ejercicios de la sección `Análisis exploratorio` del libro del curso [Fundamentos Estadísticos](https://tereom.github.io/fundamentos-2022/an%C3%A1lisis-exploratorio.html)"
    ]
   },
   {
