--- a/fundamentos-estadisticos/libros/02_pruebas_hipotesis.ipynb
+++ b/fundamentos-estadisticos/libros/02_pruebas_hipotesis.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Tarea 4: Pruebas de hipótesis\n",
     "\n",
-    "Solución de los ejercicios de la sección `Pruebas de hipótesis` del libro del curos [Fundamentos Estadísticos](https://tereom.github.io/fundamentos-2022/pruebas-de-hip%C3%B3tesis.html)"
+    "Solución de los ejercicios de la sección `Pruebas de hipótesis` del libro del curso [Fundamentos Estadísticos](https://tereom.github.io/fundamentos-2022/pruebas-de-hip%C3%B3tesis.html)"
    ]
   },
   {
