--- a/fundamentos-estadisticos/libros/03_distribucion_muestral.ipynb
+++ b/fundamentos-estadisticos/libros/03_distribucion_muestral.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Tarea 5: Distribución muestral\n",
     "\n",
-    "Solución de los ejercicios de la sección `Estimación y distribución de muestres` del libro del curos [Fundamentos Estadísticos](https://tereom.github.io/fundamentos-2022/estimaci%C3%B3n-y-distribuci%C3%B3n-de-muestreo-1.html)"
+    "Solución de los ejercicios de la sección `Estimación y distribución de muestreo` del libro del curso [Fundamentos Estadísticos](https://tereom.github.io/fundamentos-2022/estimaci%C3%B3n-y-distribuci%C3%B3n-de-muestreo-1.html)"
    ]
   },
   {
