--- a/fundamentos-estadisticos/libros/03_distribucion_muestral.ipynb
+++ b/fundamentos-estadisticos/libros/03_distribucion_muestral.ipynb
@@ -505,9 +505,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01d89e16-ccaa-446c-b19d-537c888b6c05",
+   "metadata": {},
+   "source": [
+    "**Error estándar de una media**\n",
+    "<br>Supongamos que $x$ es una variable aleatoria que toma valores en los reales con distribución de probabilidad $F$. Denotamos por $\\mu$ y $\\sigma^2$ la media y la varianza de $F$,\n",
+    "$$\\mu=E(x)$$\n",
+    "$$\\sigma^2={var}(x)=E[(x-\\mu)^2]$$\n",
+    "\n",
+    "Ahora, sea $(X_1,...,X_n)$ una muestra aleatoria de $F$ de tamaño $n$, la media de la muestra $\\bar{X}=\\sum_{i=1}^n\\frac{X_i}{n}$ tiene:\n",
+    "* Esperanza $\\mu$\n",
+    "* varianza $\\sigma^2/n$\n",
+    "\n",
+    "En palabras, las esperanza de $\\bar{X}$ es la misma que la esperanza de $x$, pero la varianza de $\\bar{X}$ es $1/n$ veces la varianza de $x$, así que entre mayor es la $n$ tenemos una mejor estimación de $\\mu$.\n",
+    "<br>En el caso del estimador de la media $\\bar{X}$, el error estándar quedaría dado por:\n",
+    "$${ee}(\\bar{X})=\\sqrt{{var}(\\bar{X})}=\\frac{\\sigma}{\\sqrt{n}}$$\n",
+    "\n",
+    "Entonces, considerando los datos de ENLACE edo. de México (ENLACE era una prueba estandarizada que se aplicaba a todos los alumnos de primaria en México), y la columna de calificaciones de español 3 de primaria (`esp_3`):\n",
+    "* Genera un histograma de las calificaciones de 3 de primaria. Calcula la media y ladesviación estándar.\n",
+    "* Aproximar la distribución muestral para tamaños de muestra $n\\in[10,100,1000]$\n",
+    "    1) Simula 5,000 muestras aleatorias\n",
+    "    2) Calcula la media en cada muestra\n",
+    "    3) Realiza un histograma de la distribución muestral de las medias (las medias del pasoanterior)\n",
+    "    4) Aproxima el error estándar calculando la desviación estándar de las medias del paso 2).\n",
+    "* Calcula el error estándar de la media para cada tamaño de muestra usando la fórmula derivada arriba y compara con tus simulaciones.\n",
+    "* ¿Cómo se comparan los errores estándar correspondientes a los distintostamaños de muestra?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcf12259-ecdd-4112-86ba-6374b4f4628f",
+   "id": "64798527-6f47-418d-adcc-3a9a98fda43f",
    "metadata": {},
    "outputs": [],
    "source": []
