--- a/optimizacion/01-computo-cientifico/1.7-integracion-numerica.ipynb
+++ b/optimizacion/01-computo-cientifico/1.7-integracion-numerica.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# 1.7 Integración numérica\n",
     "\n",
-    "Este libro es para la parte de código de la [sección 1.7 de las notas](https://itam-ds.github.io/analisis-numerico-computo-cientifico/1.computo_cientifico/1.7/Integracion_numerica.html)"
+    "Este libro es para la parte de código de la [sección 1.7 de las notas](https://itam-ds.github.io/analisis-numerico-computo-cientifico/1.computo_cientifico/1.7/Integracion_numerica.html).\n",
+    "\n",
+    "La función `quad` es un algoritmo implementado por scipy que se usa para calcular la integral definida de una función."
    ]
   },
   {
