--- a/optimizacion/01-computo-cientifico/1.6-diferenciacion-numerica.ipynb
+++ b/optimizacion/01-computo-cientifico/1.6-diferenciacion-numerica.ipynb
@@ -5,7 +5,7 @@
    "id": "87e8f9e1-c9b9-45e7-b345-f6e0f32b27e8",
    "metadata": {},
    "source": [
-    "# 1.6 Polinomios de Taylor y diferenciación numérica\n",
+    "# 1.4 Polinomios de Taylor y diferenciación numérica\n",
     "\n",
     "Este libro es para la parte de código de la [sección 1.6 de las notas](https://itam-ds.github.io/analisis-numerico-computo-cientifico/1.computo_cientifico/1.6/Polinomios_de_Taylor_y_diferenciacion_numerica.html)"
    ]
@@ -15,7 +15,7 @@
    "id": "ff735737-3889-48ae-bbc4-f95d07ff160c",
    "metadata": {},
    "source": [
-    "## Teorema de Taylor\n",
+    "# Teorema de Taylor\n",
     "**Ejemplo**:\n",
     "<br>Graficar la función y los polinomios de Taylor de grados $[0,1,2,3,4]$ y en una sola gráfica para el intervalo $[1,2]$ de la función $\\frac{1}{x}$ con centro en $x_{0}=1.5$. ¿Cuánto es la aproximación de los polinomios en $x=1.9$? Calcula el error relativo de tus aproximaciones."
    ]
@@ -181,7 +181,7 @@
    "id": "c4fea8d9-c170-4a64-a84f-abdf78446dea",
    "metadata": {},
    "source": [
-    "### Ejercicio\n",
+    "## Ejercicio\n",
     "Aproximar $f(1)$ con polinomios de Taylor de orden $[0,1,2,3,4]$ si $f(x)=-0.1x^{4}-0.15x^{3}-0.5x^{2}-0.25x+1.2$ con centro en $x0=0$. Calcula los errores relativos de tus aproximaciones. Realiza las gráficas de cada polinomio en el intervalo $[0,1]$. Observa que $R_{5}(x)$ es cero."
    ]
   },
@@ -304,7 +304,7 @@
    "id": "b3e6a1fc-f9b2-423e-a835-8e31a512c84d",
    "metadata": {},
    "source": [
-    "#### Graficando Taylor"
+    "### Graficando Taylor"
    ]
   },
   {
@@ -373,7 +373,7 @@
    "id": "0aadd9b7-106e-4614-92f1-63bc0e5fbb93",
    "metadata": {},
    "source": [
-    "#### Calculando el error"
+    "### Calculando el error"
    ]
   },
   {
@@ -838,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
