--- a/optimizacion/01-computo-cientifico/1.6-diferenciacion-numerica.ipynb
+++ b/optimizacion/01-computo-cientifico/1.6-diferenciacion-numerica.ipynb
@@ -5,7 +5,7 @@
    "id": "87e8f9e1-c9b9-45e7-b345-f6e0f32b27e8",
    "metadata": {},
    "source": [
-    "# 1.4 Polinomios de Taylor y diferenciación numérica\n",
+    "# 1.6 Polinomios de Taylor y diferenciación numérica\n",
     "\n",
     "Este libro es para la parte de código de la [sección 1.6 de las notas](https://itam-ds.github.io/analisis-numerico-computo-cientifico/1.computo_cientifico/1.6/Polinomios_de_Taylor_y_diferenciacion_numerica.html)"
    ]
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "cb3e88c9-0d71-40b7-8291-53aa57791db3",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "427c757b-c315-4af6-ab40-209c94ff0631",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "7bb8f730-6aa4-4525-be56-2efbed4e00da",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1b25f245-ed94-448f-b79f-bd55eb89d1f0",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "e77d6b4d-c56d-4011-b397-5594454f6b57",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "06b67a97-a6a6-4bf4-bfee-c85dda30a490",
    "metadata": {},
    "outputs": [],
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "77278c87-b9bb-4e26-a0ac-0f1a1d46dc46",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
        "[0.1, 0.01, 0.001, 0.0001, 1e-05]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "af4d4b6c-5c62-407d-bf3c-9644ee160566",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
        " -0.36787760178125234]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "10b67c5a-9c61-4ad4-b93b-ec703e58272a",
    "metadata": {},
    "outputs": [
@@ -632,7 +632,7 @@
        "15  1.000000e-16  0.000000  1.000000e+00"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "83e5f7d8-653b-43c2-b04b-65cbddf9ce61",
    "metadata": {},
    "outputs": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "f6f45056-7dc0-4fd3-8100-43a4b53a7637",
    "metadata": {},
    "outputs": [],
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "b7095214-ff5e-4772-b137-6150c0782052",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
        "[0.1, 0.01, 0.001, 0.0001, 1e-05]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "5d88e36e-1fb9-4326-bfe0-fc9a0775e1fa",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
        " 0.36787628499013175]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "80dc1524-6e0a-479b-a77a-96a25ab77519",
    "metadata": {},
    "outputs": [
@@ -938,7 +938,7 @@
        "15  1.000000e-16 -1.110223e+16  3.017899e+16"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "5ccae405-8c60-45bb-82b5-78fd91e11e53",
    "metadata": {},
    "outputs": [
@@ -1003,41 +1003,25 @@
    "source": [
     "## Ejercicio\n",
     "Obtener de forma analítica el valor de $h$ que minimiza la función $g(h)$ anterior. Tip: utilizar criterio de primera y segunda derivada para encontrar mínimo global.\n",
-    "<br>Sea $g(h)=K_1 h + K_2\\frac{1}{h}$, entonces:\n",
-    "* "
+    "<br>Sea $g(h)=K_1 h + K_2\\frac{1}{h}$, entonces sus derivadas:\n",
+    "* $g^{(1)}(h)=K_1-K_2\\frac{1}{h^2}=0\\therefore h=({\\frac{K_2}{K_1}})^\\frac{1}{2}$\n",
+    "\n",
+    "El valor mínimo es $g(h)|h=\\sqrt{\\frac{K_2}{K_1}}$, es decir, $2\\sqrt{K_1K_2}$\n",
+    "\n",
+    "**Pregunta**: ¿Por qué se alcanza el máximo error relativo en el valor de $h=10^{-16}$?\n",
+    "<br>Porque recordemos que la $\\epsilon_{m}$ de un sistema double (64 bits) es del orden de magnitud de $10^{-16}$, por lo que un valor $C$ de orden de magnitud $10^{-n}$ resultará en valores de orden $10^{-(16+n)}$, lo cual supera la $\\epsilon_{m}$ y por ende se llega al máximo error relativo."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3567f4e5-dd14-4971-8f9e-3989a03146e2",
+   "cell_type": "markdown",
+   "id": "0203ec2f-b939-47c4-a49e-39f25c7943c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a84219d6-121f-4371-9c0d-ca4673778350",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd6f5a0c-849a-49f8-9cca-7e4495c27796",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64de3251-8ce4-4c00-9908-a24ac624f9ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "```python\n",
+    "eps = np.spacing(1)/2\n",
+    "[eps]: 1.1102230246251565e-16\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1060,17 +1044,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "0dcfa3f1-1089-43ac-8119-cc61b8ce098e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sympy.tensor.array import derive_by_array "
+    "import sympy\n",
+    "from sympy.tensor.array import derive_by_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "68d4b2d3-1cb9-45e4-9f15-2e0c685e6cd5",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1065,7 @@
        "(x1, x2, x3, x4)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "c5a5f8d2-8591-425b-8dd0-e53b2d0244c6",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1091,7 @@
        "x1**2 + x3**2 + (x1**2 - x2**2)**2 + (x3**2 - x4**2)**2"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "91744557-6de7-48c2-b7d3-d4de555ebe91",
    "metadata": {},
    "outputs": [
@@ -1131,7 +1116,7 @@
        "[4*x1*(x1**2 - x2**2) + 2*x1, -4*x2*(x1**2 - x2**2), 4*x3*(x3**2 - x4**2) + 2*x3, -4*x4*(x3**2 - x4**2)]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
