--- a/optimizacion/01-computo-cientifico/1.6-diferenciacion-numerica.ipynb
+++ b/optimizacion/01-computo-cientifico/1.6-diferenciacion-numerica.ipynb
@@ -1028,7 +1028,7 @@
    "id": "7c528302-5b17-4959-acd8-c356d42c981f",
    "metadata": {},
    "source": [
-    "# Diferencias Finitas para $f:\\mathbb{R}^{n}\\rightarrow\\mathbb{R}$"
+    "# Diferencición Numérica para $f:\\mathbb{R}^{n}\\rightarrow\\mathbb{R}$"
    ]
   },
   {
@@ -1054,57 +1054,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9256f2b5-9404-4b75-bb6b-d8d9492ce471",
+   "metadata": {},
+   "source": [
+    "Cálculo del **gradiente** de forma simbólica"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "68d4b2d3-1cb9-45e4-9f15-2e0c685e6cd5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(x1, x2, x3, x4)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x1, x2, x3, x4 = sympy.symbols(\"x1,x2,x3,x4\")\n",
-    "x = (x1, x2, x3, x4)\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "c5a5f8d2-8591-425b-8dd0-e53b2d0244c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle x_{1}^{2} + x_{3}^{2} + \\left(x_{1}^{2} - x_{2}^{2}\\right)^{2} + \\left(x_{3}^{2} - x_{4}^{2}\\right)^{2}$"
-      ],
-      "text/plain": [
-       "x1**2 + x3**2 + (x1**2 - x2**2)**2 + (x3**2 - x4**2)**2"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = (x1**2 - x2**2)**2 + x1**2 + (x3**2 - x4**2)**2 + x3**2\n",
-    "f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "91744557-6de7-48c2-b7d3-d4de555ebe91",
+   "id": "dcb027eb-ef40-404a-af1b-59813d41e4ad",
    "metadata": {},
    "outputs": [
     {
@@ -1116,22 +1076,287 @@
        "[4*x1*(x1**2 - x2**2) + 2*x1, -4*x2*(x1**2 - x2**2), 4*x3*(x3**2 - x4**2) + 2*x3, -4*x4*(x3**2 - x4**2)]"
       ]
      },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1, x2, x3, x4 = sympy.symbols(\"x1,x2,x3,x4\")\n",
+    "x = (x1, x2, x3, x4)\n",
+    "\n",
+    "f = (x1**2 - x2**2)**2 + x1**2 + (x3**2 - x4**2)**2 + x3**2\n",
+    "\n",
+    "grad_f = derive_by_array(f, x)\n",
+    "grad_f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f17b56b3-3b1c-4321-9d86-71081f3b845d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: 3\n",
+      "1: -0\n",
+      "2: 3\n",
+      "3: -0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(grad_f)):\n",
+    "    print(f\"{i}: {grad_f[i].evalf(subs={x1:1.5, x2:1.5, x3:1.5, x4:1.5}):.0f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c164b3b8-4205-4ab7-8e98-b12c6398c5e0",
+   "metadata": {},
+   "source": [
+    "Cálculo de la **Hessiana** en forma simbólica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e1d00948-3499-4ff5-873f-b3aeca1f7ba3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}12 x_{1}^{2} - 4 x_{2}^{2} + 2 & - 8 x_{1} x_{2} & 0 & 0\\\\- 8 x_{1} x_{2} & - 4 x_{1}^{2} + 12 x_{2}^{2} & 0 & 0\\\\0 & 0 & 12 x_{3}^{2} - 4 x_{4}^{2} + 2 & - 8 x_{3} x_{4}\\\\0 & 0 & - 8 x_{3} x_{4} & - 4 x_{3}^{2} + 12 x_{4}^{2}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "[[12*x1**2 - 4*x2**2 + 2, -8*x1*x2, 0, 0], [-8*x1*x2, -4*x1**2 + 12*x2**2, 0, 0], [0, 0, 12*x3**2 - 4*x4**2 + 2, -8*x3*x4], [0, 0, -8*x3*x4, -4*x3**2 + 12*x4**2]]"
+      ]
+     },
      "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "derive_by_array(f, x)"
+    "hess_f = derive_by_array(grad_f, x)\n",
+    "hess_f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f17b56b3-3b1c-4321-9d86-71081f3b845d",
+   "execution_count": 25,
+   "id": "446a4cb3-b6d3-4262-8ee9-fc28f7d5d613",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0): 20\n",
+      "(0, 1): -18\n",
+      "(0, 2): 0\n",
+      "(0, 3): 0\n",
+      "(1, 0): -18\n",
+      "(1, 1): 18\n",
+      "(1, 2): 0\n",
+      "(1, 3): 0\n",
+      "(2, 0): 0\n",
+      "(2, 1): 0\n",
+      "(2, 2): 20\n",
+      "(2, 3): -18\n",
+      "(3, 0): 0\n",
+      "(3, 1): 0\n",
+      "(3, 2): -18\n",
+      "(3, 3): 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(hess_f.shape[0]):\n",
+    "    for j in range(hess_f.shape[1]):\n",
+    "        print(f\"{i, j}: {hess_f[i][j].evalf(subs={x1:1.5, x2:1.5, x3:1.5, x4:1.5}):.0f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c57ad1ef-ae6d-452e-ad65-4bd0ee952aa4",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Definición de la función y punto en el que se va a evaluar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "659262d9-e6e8-4524-9b87-4f7dfc71903b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x0 = np.repeat(1.5, 4)\n",
+    "\n",
+    "func = lambda x: (x[0]**2 - x[1]**2)**2 + x[0]**2 + (x[2]**2 - x[3]**2)**2 + x[2]**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c72ef70f-cb7f-4259-b4e5-2a31fa09b1c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inc_index(vec, index, h):\n",
+    "    \"\"\"\n",
+    "    Auxiliary function for gradient and Hessian computation.\n",
+    "    Args:\n",
+    "        vec (double): vector\n",
+    "        index (int): index.\n",
+    "        h (float):   quantity that vec[index] will be increased.\n",
+    "    Returns:\n",
+    "        vec (double): vector with vec[index] increased by h.\n",
+    "    \"\"\"\n",
+    "    vec[index] = vec[index] + h\n",
+    "    return vec\n",
+    "\n",
+    "def gradient_approximation(f, x, h=1e-8):\n",
+    "    \"\"\"\n",
+    "    Numerical approximation of gradient for function f using forward differences.\n",
+    "    Args:\n",
+    "        f (function): definition of function f.\n",
+    "        x (double): vector that holds values where gradient will be computed.\n",
+    "        h (float): step size for forward differences, tipically h=1e-8\n",
+    "    Returns:\n",
+    "        gf (array): numerical approximation to gradient of f.\n",
+    "    \"\"\"\n",
+    "    n = len(x)\n",
+    "    gf = np.zeros(n)\n",
+    "    for i in range(n):\n",
+    "        gf[i] = f(inc_index(x, i, h)) - f(x)\n",
+    "\n",
+    "    return gf / h\n",
+    "\n",
+    "def hessian_approximation(f, x, h=1e-6):\n",
+    "    \"\"\"\n",
+    "    Numerical approximation of Hessian for function f using forward differences.\n",
+    "    Args:\n",
+    "        f (function): definition of function f.\n",
+    "        x (double): vector that holds values where Hessian will be computed.\n",
+    "        h (float): step size for forward differences, tipically h=1e-6\n",
+    "    Returns:\n",
+    "        Hf (double): matrix of numerical approximation to Hessian of f.\n",
+    "    \"\"\"\n",
+    "    n = len(x)\n",
+    "    Hf = np.zeros((n, n))\n",
+    "    f_x = f(x)\n",
+    "    for i in range(n):\n",
+    "        x_inc_in_i = inc_index(x, i, h)\n",
+    "        f_x_inc_in_i = f(x_inc_in_i)\n",
+    "        for j in np.arange(i, n):\n",
+    "            dif = f(inc_index(x_inc_in_i, j, h)) - f_x_inc_in_i - f(inc_index(x, j, h)) + f_x\n",
+    "            Hf[i,j] = dif\n",
+    "            if j != i:\n",
+    "                Hf[j,i] = dif\n",
+    "\n",
+    "    return Hf / h**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc72ce91-efd1-4e20-a8c2-c5d03f16ce66",
+   "metadata": {},
+   "source": [
+    "### Calculando el error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "970cdf3a-31a3-4c3e-91d9-4977d6af29b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.1, 0.01, 0.001, 0.0001, 1e-05]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Diccionario para almacenar derivadas\n",
+    "dif_rn = {'h': []}\n",
+    "\n",
+    "#Vector de h's: [1e-1, 1e-16]\n",
+    "for i in range(1,17):\n",
+    "    dif_rn['h'].append(math.pow(10, -i))\n",
+    "    \n",
+    "dif_rn['h'][:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "695a5cf0-f365-4cde-abb0-503c15540f52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def euclidian_norm(vec):\n",
+    "    \"\"\"Compute Euclidian norm of vector\"\"\"\n",
+    "    return np.sqrt(sum(vec*vec))\n",
+    "\n",
+    "def compute_error(obj,approx):\n",
+    "    \"\"\"\n",
+    "    Relative or absolute error between obj and approx based in Euclidian norm. \n",
+    "    Approx is a numeric vector.\n",
+    "    \"\"\"\n",
+    "    if euclidian_norm(obj > np.spacing(1)/2 * 2.225074e-308):\n",
+    "        Err = euclidian_norm(obj - approx) / euclidian_norm(obj)\n",
+    "    else:\n",
+    "        Err = Euclidian_norm(obj-approx)\n",
+    "    return Err"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b943fd0d-aa87-41bf-9f55-b08725792aab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for h in dif_rn['h']:\n",
+    "    print(gradient_approximation(func, x0, h))"
+   ]
   }
  ],
  "metadata": {
