Path de asignatura

--- a/mineria-analisis-datos/libros/DM_03_EDA.ipynb
+++ b/mineria-analisis-datos/libros/DM_03_EDA.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "id": "k-HxGyzCQK-5"
    },
@@ -31,35 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['.git',\n",
-       " '.gitignore',\n",
-       " 'aprendizaje-automatico',\n",
-       " 'estadistica-computacional',\n",
-       " 'fundamentos-estadisticos',\n",
-       " 'mineria-analisis-datos',\n",
-       " 'optimizacion',\n",
-       " 'README.md']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path_universal = \"C:\\\\Users\\\\Miguel\\\\Documents\\\\Github\\\\itam-mcd\"\n",
-    "os.listdir(path_universal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,20 +40,19 @@
        "['datos', 'libros', 'proyecto']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path_asignatura = \"mineria-analisis-datos\"\n",
-    "path_asignatura = os.path.join(path_universal, path_asignatura)\n",
+    "path_asignatura = os.path.dirname(os.getcwd())\n",
     "os.listdir(path_asignatura)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -236,7 +207,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
