--- a/optimizacion/01-computo-cientifico/1.7-integracion-numerica.ipynb
+++ b/optimizacion/01-computo-cientifico/1.7-integracion-numerica.ipynb
@@ -173,9 +173,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1a30a02c-2df5-42c9-aa76-e15d89e4ca54",
+   "metadata": {},
+   "source": [
+    "# Práctica 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bdaa2922-f9a9-4b74-8e55-fe1107dabb57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = lambda x: x**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25805a8b-2b87-498d-b807-c08577b1ed8e",
+   "metadata": {},
+   "source": [
+    "Para todo el intervalo $x\\in(\\infty^{-},\\infty^{+})$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d89df166-6916-4b7f-81cc-e4406103f500",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5063422263362916"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iteraciones = []\n",
+    "\n",
+    "n = int(1e6)\n",
+    "for i in range(100):\n",
+    "    normal_rvs = np.random.normal(loc=0, scale=1, size=n)\n",
+    "    \n",
+    "    integral = np.mean(h(normal_rvs) * np.sqrt(2*np.pi))\n",
+    "    iteraciones.append(integral)\n",
+    "    \n",
+    "np.mean(iteraciones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "86d6fbcb-211e-47a7-9526-e65b0c2b9509",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5066282746310002"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Target\n",
+    "np.sqrt(2*np.pi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d467e76-a2f6-4187-a0f6-824c640bbd07",
+   "metadata": {},
+   "source": [
+    "Para el intervalo $x\\in(\\infty^{-},b)$, se define la siguiente función a trozos para la distribución normal:\n",
+    "$g(x)=\\{N(0,1)\\forall x\\leq b, 0 \\forall x>b\\}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "eaf99f9b-6724-4406-b83a-70dc3f7d0753",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6343705935794526"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iteraciones = []\n",
+    "\n",
+    "n = int(1e6)\n",
+    "for i in range(100):\n",
+    "    normal_rvs = np.random.normal(loc=0, scale=1, size=n)\n",
+    "    #Aquí lo nuevo\n",
+    "    normal_rvs = np.array(list(map(lambda x: 0 if x >= 1.2 else x, normal_rvs)))\n",
+    "    \n",
+    "    integral = np.mean(h(normal_rvs) * np.sqrt(2*np.pi))\n",
+    "    iteraciones.append(integral)\n",
+    "    \n",
+    "np.mean(iteraciones)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beb3d6f8-5282-4762-8eec-dd431bfe977b",
+   "id": "cc290ca5-6ce0-44d4-81b0-f866e02acb29",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -197,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
